# July_2024_skunk

skunk/: CMakeLists.txt  package.xml
skunk/launch/: skunk_launch.py
skunk/src/: mode_node.cpp
